--------------------------------------------------------------------------------
 Fusion 1.213 - November 12th, 2004
--------------------------------------------------------------------------------
- 01-14-05: Removed weiss.ini's DefaultNPCID after research. [Tsusai]
- 01-14-05: Empty lines in inventory.txt caused crash. [AlexKreuz]
- 01-13-05: Option to uncap Firewall & Icewall (Set to 0). [AlexKreuz]
- 01-10-05: Fixed global npc broadcasting of plain blue messages. [Tsusai]
- 01-10-05: Uncapped #hcolor. [Tsusai]
- 01-07-05: Added Icewall Cap modifier to weiss.ini. [AlexKreuz]
- 01-07-05: Added Firewall Cap modifier to weiss.ini. [AlexKreuz]
- 01-06-05: Guild folders not in Int format caused crash on guildid retrieval. [AlexKreuz]
- 01-06-05: Readded support for set baselevel (hopefully improved). [Tsusai]
- 01-06-05: Bug tracing in retrieve_inventories. Missing data in "identify" column. [AlexKreuz]
- 01-06-05: Bug tracing in PD_Load_Accounts function. Loading ActiveChars fails (?). [AlexKreuz]
- 01-06-05: Bug tracing in DatabaseLoad function. Item can not be inserted into Item List. [AlexKreuz]
- 01-06-05: Bug tracing in SendCLeave function. Character mapdata invalid. [AlexKreuz]
- 01-05-05: JCon character saves are now instant. [AlexKreuz]
- 01-05-05: Updated backup function to include correct files and correct paths. [AlexKreuz]
- 01-05-05: Added Bugtracker & Forum links to Fusion Menu. [AlexKreuz]
- 01-05-05: OnTouch triggering more stable. [Tsusai]
- 01-02-05: Reindented game.pas; Added Clown/Gypsy support to party handling. [Tsusai]
- 01-02-05: Added #email [password] [new_email] ALBGM command. [AlexKreuz]
- 01-01-05: Packet exchange access violation on character moving. [AlexKreuz]
- 01-01-05: Undefined map blocks on packet sends to players caused crash. [AlexKreuz]
- 01-01-05: Other characters disconnecting while moving caused missend of packet. [AlexKreuz]
- 01-01-05: Added NPC areaset. [Tsusai]